@@ -1,3 +1,4 @@
+- added thumbnail support
 v0.1.2 (2017-11-22)
 - fix stability issue (related to query parameters not reloading correctly between navigations
 v0.1.1 (2017-11-19)
